Se rehacen los controladores, y se valida el primer acceso a login

--- a/build.xml
+++ b/build.xml
@@ -7,8 +7,8 @@
 <!-- the Compile on Save feature is turned off for the project. -->
 <!-- You can turn off the Compile on Save (or Deploy on Save) setting -->
 <!-- in the project's Project Properties dialog box.-->
-<project name="act2devweb" default="default" basedir=".">
-    <description>Builds, tests, and runs the project act2devweb.</description>
+<project name="act2_devweb" default="default" basedir=".">
+    <description>Builds, tests, and runs the project act2_devweb.</description>
     <import file="nbproject/build-impl.xml"/>
     <!--
 
